--- a/templates/content/play.html.twig
+++ b/templates/content/play.html.twig
@@ -6,7 +6,8 @@
     <div class="container">
         <h1>{{ content.title }}</h1>
         <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="http://localhost/urps/public/games/extract/gluciboat/index.html"></iframe>
-        </div>    
+        <iframe class="embed-responsive-item" src="http://localhost/urps/public/uploads/games/extract/gluciboat/index.html"></iframe>
+        </div>
+        <button class="button">Click me to fullscreen the iframe</button>
     </div>
 {% endblock %}
