--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -78,7 +78,7 @@
                                                 </a>
                                             </div>
                                             
-                                            <p class="mb-5 mt-3">{{ content.content }}</p>
+                                            <p class="mb-5 mt-3">{{ content.description }}</p>
                                             <a class="btn btn-success btn-lg rounded-pill" href="{{ path('contents_play', {'slug': content.slug }) }}">
                                             <i class="fa fa-close"></i>
                                                 Voir le jeu
