--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -12019,8 +12019,7 @@ body.sidebar-toggled footer.sticky-footer {
 .popup
 {
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 100px;
     left: 0;
     right: 0;
     top: 80px;
