--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block Sidebar %}
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion toggled" id="accordionSidebar">
       {% if is_granted('ROLE_ADMIN') %}
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('admin_index') }}">
