--- a/templates/admin/user/view.html.twig
+++ b/templates/admin/user/view.html.twig
@@ -21,7 +21,7 @@
                                         </div>
                                     {% endif %}
                                     <a href="{{ url }}">
-                                        <img src="{{ content.coverImage }}" alt="image jeux-1"
+                                        <img src="{{ vich_uploader_asset(content, 'coverImageFile') }}" alt="image jeux-1"
                                             style="height: 200px; width: 100%; display: block;">
                                     </a>
 
