--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Admin - {% block adminTitle %}{% endblock %}{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/b-1.5.6/b-colvis-1.5.6/b-flash-1.5.6/b-html5-1.5.6/r-2.2.2/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/dataTables.bootstrap4.css"/>
 {% endblock %}
 
 {% block Sidebar %}
@@ -97,10 +97,7 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/b-1.5.6/b-colvis-1.5.6/b-flash-1.5.6/b-html5-1.5.6/r-2.2.2/datatables.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>    
-    <script src="/js/content.js"></script>
+
+    <script src="/js/datatables.min.js"></script>
+
 {% endblock %}
