--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,9 +14,10 @@
 
         <!-- Custom styles for this template-->
         <link href="/css/sb-admin-2.css" rel="stylesheet">
-        
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/css/select2.min.css" rel="stylesheet" />
+        <link href="/css/select2.css" rel="stylesheet" />
+
         {% block stylesheets %}{% endblock %}
+
     </head>
 
     <body id="page-top">
@@ -64,7 +65,7 @@
         <!-- Custom scripts for all pages-->
         <script src="/js/sb-admin-2.min.js"></script>      
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
+        <script src="/js/select2.full.js"></script>
         
         {% block javascripts %}{% endblock %}
     </body>
