--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,6 +9,10 @@
     text-decoration: none;
     font-weight: 400;
   }
+
+  h1 {
+    font-size: 2rem!important;
+  }
   
   h2 {
     text-align: center;
