--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -39,7 +39,7 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ path('admin_tutors_index') }}">
             <i class="fas fa-fw fa-user-md"></i>
-            <span>Tuteurs</span></a>
+            <span>Médecins/tuteurs</span></a>
         </li>
 
         <!-- Nav Item - Tables -->
