--- a/templates/admin/content/stats.html.twig
+++ b/templates/admin/content/stats.html.twig
@@ -16,7 +16,7 @@
                 <div class="card-body">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre d'utilisateur inscrit</div>
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre d'utilisateur{{ (nbParticipateContents > 1) ? 's' : '' }} inscrit{{ (nbParticipateContents > 1) ? 's' : '' }}</div>
                     <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbParticipateContents }}</div>
                     </div>
                     <div class="col-auto">
@@ -33,7 +33,7 @@
                 <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Pourcentage d'utilisateur ayant finis ce serious game</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">Activité des utilisateurs sur le jeu serieux</h6>
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
