--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -17,7 +17,7 @@
                 <div class="row no-gutters align-items-center">
                   <div class="col mr-2">
                     <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre de patients</div>
-                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbUsers }}</span> ( {{ nbUsersActive }} connecté durant le mois )</div>
+                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbUsers }}</span> ( {{ nbUsersActive }} connecté{{ (nbUsersActive > 1) ? 's' : '' }} durant le mois )</div>
                   </div>
                   <div class="col-auto">
                     <i class="fas fa-user-injured fa-2x text-gray-300"></i>
@@ -32,8 +32,8 @@
               <div class="card-body">
                 <div class="row no-gutters align-items-center">
                   <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre de tuteurs</div>
-                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbTutors }}</span> ( {{ nbTutorsActive }} connecté durant les 4 derniers mois )</div>
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre de médecins/tuteurs</div>
+                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbTutors }}</span> ( {{ nbTutorsActive }} connecté{{ (nbTutorsActive > 1) ? 's' : '' }} durant les 4 derniers mois )</div>
                   </div>
                   <div class="col-auto">
                     <i class="fas fa-user-md fa-2x text-gray-300"></i>
@@ -48,8 +48,8 @@
               <div class="card-body">
                 <div class="row no-gutters align-items-center">
                   <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre de cours</div>
-                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbContents }}</span> dont {{ nbContentsActive }} active{{ (nbContentsActive > 1) ? 's' : '' }}</div>
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre de jeux sérieux</div>
+                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbContents }}</span> dont {{ nbContentsActive }} actif{{ (nbContentsActive > 1) ? 's' : '' }}</div>
                   </div>
                   <div class="col-auto">
                     <i class="fas fa-gamepad fa-2x text-gray-300"></i>
@@ -67,7 +67,7 @@
           <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-              <h6 class="m-0 font-weight-bold text-primary">Suivie inscription utilisateurs ({{ year }})</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Suivi des inscriptions des utilisateurs patients ({{ year }})</h6>
               <div class="dropdown no-arrow">
                 <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
