--- a/templates/admin/user/view.html.twig
+++ b/templates/admin/user/view.html.twig
@@ -4,7 +4,7 @@
 
 {% block main %}
     <div class="container-fluid">
-        <h1 class="my-5">Historique du Patient {{ user.fullname }}</h1>
+        <h1 class="my-5">Suivi du patient {{ user.fullname }}</h1>
 
         <div class="card mt-3">
             <div class="card-body">
@@ -42,7 +42,7 @@
                     <div class="row justify-content-md-center align-items-center">
                         <div class="col-auto text-align">
                             <div class="alert alert-warning mt-3 mx-auto">
-                                <h4 class="alert-heading">L'utilisateur n'a participer a aucun serious game</h4>
+                                <h4 class="alert-heading">L’utilisateur ne participe à aucun jeu sérieux.</h4>
                             </div>
                         </div>
                     </div>   
