--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,16 +15,16 @@
     <!-- Header -->
     <header class="masthead bg-primary-custom text-white text-center">
         <div class="container">
-            <h1 class="text-uppercase mb-0">Plateforme ETP</h1>
+            <h1 class="text-uppercase mb-0">plateforme de formation</h1>
             <hr class="star-light">
-            <h2 class="font-weight-light mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ratione?</h2>
+            <h2 class="font-weight-light mb-0">Cette plateforme s’adresse aux patients des médecins libéraux de PACA, afin de soutenir leur activité de soins en tant qu’acteurs régionaux de Santé Publique. </h2>
         </div>
     </header>
 
     <!-- Recommended Grid Section -->
     <section class="portfolio" id="portfolio">
         <div class="container">
-            <h2 class="text-center text-uppercase text-secondary mb-0">Recommandé</h2>
+            <h2 class="text-center text-uppercase text-secondary mb-0">Recommandé pour vous</h2>
             <hr class="star-dark mb-5">
             <div class="row">
                 {% if user.recommendedContent is not empty %}
@@ -92,7 +92,7 @@
                     {% endfor %}
                 {% else %}
                     <div class="alert alert-warning mt-3 mx-auto">
-                        <h4 class="alert-heading">Vous n'avez aucun serious game recommandé</h4>
+                        <h4 class="alert-heading">Vous n'avez aucun jeu sérieux recommandé</h4>
                     </div>
                 {% endif %}                    
             </div>
