--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -21,14 +21,14 @@
                         {% endif %}
 
                         <div class="col-auto text-align">
-                            <a href="{{ path('update_password') }}" class="btn btn-primary mr-2 mb-2"><i class="far fa-edit fa-lg"></i> Modifier mon mot de password</a>
+                            <a href="{{ path('update_password') }}" class="btn btn-primary mr-2 mb-2"><i class="far fa-edit fa-lg"></i> Modifier mon mot de passe</a>
                         </div>
                     </div>
                 </div>                              
             </div>
         {% endif %}
         <hr>
-        <h2>Serious game</h2>
+        <h2>Jeux sérieux</h2>
 
         <div class="card mt-3">
             <div class="card-body">
@@ -66,7 +66,7 @@
                     <div class="row justify-content-md-center align-items-center">
                         <div class="col-auto text-align">
                             <div class="alert alert-warning mt-3 mx-auto">
-                                <h4 class="alert-heading">Vous n'avez particier a aucun serious game</h4>
+                                <h4 class="alert-heading">Vous ne participez à aucun jeu sérieux.</h4>
                             </div>
                         </div>
                     </div>   
