--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,7 @@
                     <footer class="sticky-footer bg-white">
                         <div class="container my-auto">
                             <div class="copyright text-center my-auto">
-                                <span>Copyright &copy; Urps ml paca 2019</span>
+                                <span>Copyright &copy; URPS ML PACA 2019</span>
                             </div>
                         </div>
                     </footer>
