--- a/templates/tutor/edit.html.twig
+++ b/templates/tutor/edit.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification des informations personnels{% endblock %}
+{% block title %}Modification des informations personnelles{% endblock %}
 
 {% block main %}
     <div class="container ">
-        <h1 class='my-5'>Modification des informations personnels</h1>
+        <h1 class='my-5'>Modification des informations personnelles</h1>
 
         {{ form_start(form) }}
             <div class="row">
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="col text-center mb-3">
-                <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Mise a jour</button>         
+                <button type="submit" class="btn btn-success"><i class="fas fa-check"></i> Mise à jour</button>         
             </div>                
         {{ form_end(form) }}
     </div>
